compiler/fir/analysis-tests/testData/resolve/diagnostics/selfTypes/forEnumEntry.kt
import kotlin.Self
enum class EnumClass {
    <!WRONG_ANNOTATION_TARGET!>@Self<!>
    Entry
}